--- a/formulario/index.html
+++ b/formulario/index.html
@@ -49,6 +49,10 @@
                           <input type="text" id="nome" name="nome">
                           <br><br><br>
 
+                          <label for="nome">documento de identidade:</label><br>
+                          <input type="text" id="nome" name="nome">
+                          <br><br><br>
+
                     </form>
                     </div>
             </div>
