--- a/formulario/index.html
+++ b/formulario/index.html
@@ -15,6 +15,7 @@
 
         <section class="apresentacao__formulario">
             <div class="inscricao">
+                <nav>voltar</nav>
                 <h1>Formulário de inscrição</h1>
                 <p>Preencha os dados abaixo para fazer sua inscrição no Programa Trilhas.</p>
             
@@ -35,11 +36,7 @@
 
                         <label for="nome">sexo:</label>   
                         <input type="text" id="nome" name="nome">
-                        <select name="select">
-                            <option value="sexo" selected></option>
-                            <option value="femenino">femenino</option>
-                            <option value="masculino">masculino</option>
-                          </select><br><br><br>
+                        <br><br><br>
 
                           <label for="nome">email:</label><br>
                           <input type="text" id="nome" name="nome">
@@ -49,9 +46,16 @@
                           <input type="text" id="nome" name="nome">
                           <br><br><br>
 
-                          <label for="nome">documento de identidade:</label><br>
-                          <input type="text" id="nome" name="nome">
-                          <br><br><br>
+
+                          <div class="upload-zone">
+                            <div class="icon bi bi-cloud-upload"></div>
+                            <p class="file-name">No File Uploaded</p>
+                            <p class="file-size">clique aqui para selecionar o arquivo</p>
+                            <input  type="file" id="input-file" name="file" accept="" required>
+                          
+                          </div>
+
+
 
                     </form>
                     </div>
