--- a/formulario/index.html
+++ b/formulario/index.html
@@ -24,7 +24,7 @@
                 <p class="baixo">Preencha os dados abaixo para fazer sua inscrição no <p class="cima" id="wave-text">Programa   Trilhas.</p></p>
                 <h3 class="titulos">Informações do participante</h3>
                 <form id="cadastro">
-                    <label for="nome">Digite seu nome:</label>
+                    <label for="nome">Digite seu nome de usuário:</label>
                     <input type="text" id="nome" name="nome" class="trilha1" required>
                     <br><br><br>
 
@@ -84,7 +84,7 @@
                                     <p> Design e Experiência</p>
                                 </div>
                                 <div class="trilha">
-                                    <div class="check__p__icone"> <img class="check__icone"  src="img/image copy 6.png" alt=""></div>
+                                    <div class="check"> <img class="check__icone"  src="img/image copy 6.png" alt=""></div>
                                     <img class="icones" src="img/image copy 5.png" alt="">
                                     <p> Ciência de Dados</p>
                                 </div>
